--- a/N4/Dockerfile
+++ b/N4/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:latest
 ENV PYTHONUNBUFFERED=1
-RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
-RUN python3 -m ensurepip
+RUN apk add --update --no-cache pyt3-pip
+#RUN python3 -m ensurepip
 COPY N3/requirements.txt /usr/src/app
 RUN pip install --nocache-dir -r /usr/src/app/requirements.txt
 
