--- a/N4/Dockerfile
+++ b/N4/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 ENV PYTHONUNBUFFERED=1
-RUN apk add --update --no-cache pyt3-pip
+RUN apk add --update --no-cache py3-pip
 #RUN python3 -m ensurepip
 COPY N3/requirements.txt /usr/src/app
 RUN pip install --nocache-dir -r /usr/src/app/requirements.txt
