--- a/N4/Dockerfile
+++ b/N4/Dockerfile
@@ -3,7 +3,7 @@ ENV PYTHONUNBUFFERED=1
 RUN apk add --update --no-cache py3-pip
 #RUN python3 -m ensurepip
 COPY N3/requirements.txt /usr/src/app
-RUN pip install --nocache-dir -r /usr/src/app/requirements.txt
+RUN pip install -r /usr/src/app/requirements.txt
 
 COPY N3/main.py /usr/src/app/
 
