added docker compose

--- a/N2/docker-playbook.yml
+++ b/N2/docker-playbook.yml
@@ -25,7 +25,9 @@
 
     - name: Update apt and install docker-ce
       apt:
-        name: docker-ce
+        name: 
+          - docker-ce
+          - docker-compose
         state: latest
         update_cache: true
 
